# BoxingCoach

./: .gitignore  CMakeLists.txt
include/: boxing_sequence_generator.h
src/: boxing_sequence_generator.cpp  main.cpp
test/: CMakeLists.txt  boxing_sequence_generator_test.cpp
